Update dependencies. Supress some warnings. Replace depricated code.